Fix text truncate stylings for feed code items

--- a/SoloLearn/app/Scripts/styles/Feed/codeFeedItem.scss
+++ b/SoloLearn/app/Scripts/styles/Feed/codeFeedItem.scss
@@ -9,16 +9,16 @@
 		.code-snippet, .comment-text {
 			flex: 2;
 			color: #777;
-			fontSize: 13px;
-			whiteSpace: pre;
+			font-size: 13px;
+			white-space: pre-wrap;
 		}
 		.language-tag {
 			display: inline-flex;
-			alignItems: center;
-			justifyContent: center;
+			align-items: center;
+			justify-content: center;
 			width: 30px;
 			height: 30px;
-			fontSize: 12px;
+			font-size: 12px;
 			color: #fff;
 		}
 	}
